fix text-align-justify and replace the span tag with strong to make the five pointer related to create a foundation for Terraform bold

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p {
   margin-bottom: 1rem;
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-  text-align: justify;
+  /* text-align: justify; */
 }
 
 li {
